--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,9 +1,10 @@
 # MySQL properties
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/lib?useSSL=false
+db.url=jdbc:mysql://localhost:3306/lib?useSSL=false&allowPublicKeyRetrieval=true
 db.username=root
 db.password=root1234
 
 # Hibernate properties
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
